--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -1,17 +1,17 @@
 @model Equipe 
 @{
-    ViewData["Title"] = "Equipe";
+    ViewData["Title"] = "Equipes";
 }
-
-<form method="POST" action='@Url.Action("CAdastrar")'>
+                                                     @* trabalhar com arquivos *@
+<form method="POST" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
     <label>ID</label>
-    <Input type="text" name="IdEquipe" />
+    <Input type="text" name="IdEquipe"/>
 
     <label>Nome</label>
-    <input type="text" name="Nome" />
+    <input type="text" name="Nome"/>
 
     <label>Imagem</label>
-    <input type="text" name="Imagem" />
+    <input type="file" name="Imagem"/>
 
     <button type="submite">Cadastar</button>
 
@@ -28,7 +28,8 @@
             <tr>
                 <td>@equipe.IdEquipe</td>
                 <td>@equipe.Nome</td>
-                <td>@equipe.Imagem</td>
+                <td><img src="/img/Equipes/@equipe.Imagem" alt="Imagem da equipe @equipe.Nome" width="50"></td>
+                <td><a asp-area="Link para excluir uma equipe" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe">Excluir</a></td>
             </tr>
         }
     </tbody>
