--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -1,19 +1,32 @@
 @model Equipe 
 @{
     ViewData["Title"] = "Equipes";
+
 }
+
+<div class= "titulo pagina">
+    <h1>Cadastro de @ViewData["Title"]</h1>
+</div>
+
                                                      @* trabalhar com arquivos *@
-<form method="POST" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
-    <label>ID</label>
-    <Input type="text" name="IdEquipe"/>
+<form calss="Cadastro" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
 
-    <label>Nome</label>
-    <input type="text" name="Nome"/>
+    <div class="campo"></div>
+        <label>ID</label>
+        <Input type="text" name="IdEquipe"/>
+    </div>
 
-    <label>Imagem</label>
-    <input type="file" name="Imagem"/>
+    <div class="campo">
+        <label>Nome</label>
+        <input type="text" name="Nome"/>
+    </div>
 
-    <button type="submite">Cadastar</button>
+    <div class="campo">
+        <label>Imagem</label>
+        <input type="file" name="Imagem"/>
+    </div>
+
+    <button class="gradient btn" type="submite">Cadastar</button>
 
 </form>
 <table class="table table-striped table-responsive">
@@ -21,6 +34,7 @@
         <th>ID</th>
         <th>Nome</th>
         <th>Foto</th>
+        
     </thead>
     <tbody>
         @foreach (Equipe equipe in ViewBag.Equipes)
