--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
                     <i class="fas fa-bars"></i>
                 </a>
 
-                <a asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="Images/Logo.svg" alt="Logo do site E-Players">
+                <a href="index.html">
+                    <img src="~/Images/Logo.svg" alt="Logo do site E-Players">
                 </a>
             </div>
             <nav id="menu">
                 <ul>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index" title="voltar para a página inicial">INÍCIO</a></li>
+                    <li><a href="index.html" title="voltar para a página inicial">INÍCIO</a></li>
                     <li><a href="#horarios" title="Ir até a sessão de horários das partidas">HORÁRIOS</a></li>
                     <li><a href="#resultados" title="Ir até a sessão de resultados das partidas">RESULTADOS</a></li>
                     <li><a href="#noticias" title="Ir até a sessão de notícias">NOTÍCIAS</a></li>
@@ -71,7 +71,8 @@
             </div>
         </div>
         <p>© Copyrigth 2077 - Todos os direitos reservados ao sena-code</p>
-    </footer>
+    </footer> 
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
