eplayers aspnetcore frontEnd

--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Equipes";
 }
 
-<div class= "titulo pagina">
+<div class= "titulo_pagina">
     <h1>Cadastro de @ViewData["Title"]</h1>
 </div>
 
