--- a/Views/Equipe/Index.cshtml
+++ b/Views/Equipe/Index.cshtml
@@ -8,7 +8,7 @@
 </div>
 
                                                      @* trabalhar com arquivos *@
-<form method="POST" action='@Url.Action("Cadastrar")'  enctype="multipart/form-data" calss="cadastro">
+<form method="POST" class="cadastro" action='@Url.Action("Cadastrar")'  enctype="multipart/form-data" >
 
     <div class="campo">
         <label>ID</label>
